# LinuxDev2020

03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  Window.c
06_Debugging/: double-free.c
07_DebuggingTracing/: Makefile  wrapper.c
09_I18nL10n/: Makefile
10_Documenting/: Doxyfile  Makefile  changes.pot  guess  guess.1  guess.c
10_Documenting/po/: guess.pot  guess.pot~
10_Documenting/po/ru/LC_MESSAGES/: guess.mo  guess.po  guess.po~
11_Toolkits/: Makefile  freq.c
12_ScriptingText/: configure.ac
12_ScriptingText/src/: Makefile.am
13_PatchInstall/: Makefile  guess.c
13_PatchInstall/ru/LC_MESSAGES/: guess.po
